--- a/BankMvcApp/Views/Shared/_Layout.cshtml
+++ b/BankMvcApp/Views/Shared/_Layout.cshtml
@@ -25,11 +25,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="GetAllUsers">get customers</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="CreateNewUser">create customer</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Transaction" asp-action="ViewStatement">get customers</a>
-                        </li>
+                        
 
                     </ul>
                 </div>
