--- a/BankMvcApp/Views/Customer/Credentials.cshtml
+++ b/BankMvcApp/Views/Customer/Credentials.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<BankEntity.Customer>
+﻿@model IEnumerable<BankEntity.Credential>
 
 @{
-    ViewData["Title"] = "GetAllUsers";
+    ViewData["Title"] = "Credentials";
 }
 
-<h1>GetAllUsers</h1>
+<h1>Credentials</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -13,13 +13,10 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.CRN)
+                @Html.DisplayNameFor(cred => cred.CRN)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.BranchCode)
+                @Html.DisplayNameFor(model => model.AccNo)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.TransactionPwd)
@@ -28,16 +25,7 @@
                 @Html.DisplayNameFor(model => model.IbPassword)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Address)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.BirthDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MobileNo)
+                @Html.DisplayNameFor(model => model.BranchCode)
             </th>
             <th></th>
         </tr>
@@ -49,10 +37,7 @@
                 @Html.DisplayFor(modelItem => item.CRN)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.BranchCode)
+                @Html.DisplayFor(modelItem => item.AccNo)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.TransactionPwd)
@@ -61,16 +46,7 @@
                 @Html.DisplayFor(modelItem => item.IbPassword)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Address)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.BirthDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MobileNo)
+                @Html.DisplayFor(modelItem => item.BranchCode)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
