mvc almost over

--- a/BankMvcApp/Views/Customer/Credentials.cshtml
+++ b/BankMvcApp/Views/Customer/Credentials.cshtml
@@ -13,7 +13,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(cred => cred.CRN)
+                @Html.DisplayNameFor(model => model.CRN)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.AccNo)
