--- a/BankMvcApp/Views/Shared/_Layout.cshtml
+++ b/BankMvcApp/Views/Shared/_Layout.cshtml
@@ -21,12 +21,38 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+                        
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="CreateNewUser">create customer</a>
                         </li>
+                        <li>
+                       
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Beneficiary" asp-action="AddBeneficiary">create Beneficiary</a>
+                        </li>
+                         <li>
+                       
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Beneficiary" asp-action="ShowAllBeneficiary">create Beneficiary</a>
+                        </li>
+                        <li>
+                       
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Transaction" asp-action="Deposit">Deposit</a>
+                        </li>
+                         <li>
+                       
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Transaction" asp-action="Withdraw">WithDraw</a>
+                        </li>
+                         
+                         <li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Transaction" asp-action="FundTransfer">Fundtransfer</a>
+                        </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="EditCustomer">EditCustomer</a>
+                        </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Transaction" asp-action="ViewStatement">ViewStatement</a>
+                        </li>
+                        
+                        
                         
 
                     </ul>
