--- a/BankMvcApp/Views/Transaction/ViewStatement.cshtml
+++ b/BankMvcApp/Views/Transaction/ViewStatement.cshtml
@@ -18,7 +18,7 @@
              <input asp-for="SenderAccNo" class="form-control"/>
              <span asp-validation-for="SenderAccNo" class="text-danger"></span>
 </div>
-<input type="Submit" value="View Statemet" class="btn btn-success"/>
+<input type="Submit" value="View Statement" class="btn btn-success"/>
 </form>
 </div>
 </div>
