some changes made

--- a/BankMvcApp/Views/Shared/_Layout.cshtml
+++ b/BankMvcApp/Views/Shared/_Layout.cshtml
@@ -11,16 +11,14 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">BankMvcApp</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Zigma</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
+                       
                         
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="CreateNewUser">create customer</a>
@@ -31,7 +29,7 @@
                         </li>
                          <li>
                        
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Beneficiary" asp-action="ShowAllBeneficiary">create Beneficiary</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Beneficiary" asp-action="ShowAllBeneficiary">show Beneficiary</a>
                         </li>
                         <li>
                        
@@ -50,6 +48,9 @@
                         </li>
                         <li>
                             <a class="nav-link text-dark" asp-area="" asp-controller="Transaction" asp-action="ViewStatement">ViewStatement</a>
+                        </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="FreezeAccount">FreezeAccount</a>
                         </li>
                         
                         
