--- a/BankMvcApp/Views/Transaction/WithDraw.cshtml
+++ b/BankMvcApp/Views/Transaction/WithDraw.cshtml
@@ -17,43 +17,23 @@
                 <input asp-for="ReceiverAccNo" class="form-control" />
                 <span asp-validation-for="ReceiverAccNo" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="SenderAccNo" class="control-label"></label>
-                <input asp-for="SenderAccNo" class="form-control" />
-                <span asp-validation-for="SenderAccNo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="TransactionId" class="control-label"></label>
-                <input asp-for="TransactionId" class="form-control" />
-                <span asp-validation-for="TransactionId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Branchcode" class="control-label"></label>
-                <input asp-for="Branchcode" class="form-control" />
-                <span asp-validation-for="Branchcode" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="TransactionDate" class="control-label"></label>
-                <input asp-for="TransactionDate" class="form-control" />
-                <span asp-validation-for="TransactionDate" class="text-danger"></span>
-            </div>
+            
+            
+            
+            
             <div class="form-group">
                 <label asp-for="TransactionAmount" class="control-label"></label>
                 <input asp-for="TransactionAmount" class="form-control" />
                 <span asp-validation-for="TransactionAmount" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="TransactionType" class="control-label"></label>
-                <input asp-for="TransactionType" class="form-control" />
-                <span asp-validation-for="TransactionType" class="text-danger"></span>
-            </div>
+           
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Submit" class="btn btn-primary" />
             </div>
         </form>
     </div>
