--- a/BankMvcApp/Views/Admin/Index.cshtml
+++ b/BankMvcApp/Views/Admin/Index.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Banking";
  
     
-    Layout = "_Layout";
+     Layout = "_Layout1";
 
 }
 <body>
@@ -14,16 +14,16 @@
         
 
           <div class="col-lg-6 video-box align-self-baseline position-relative">
-            <img style="  border-radius: 12px;  width:500px; height: 300px !important;"src="assets/img/fund.jpg" class="img-fluid" alt="">
+            <img style="  border-radius: 12px;  width:500px; height: 300px !important;"src="assets/img/deposit.jpg" class="img-fluid" alt="">
             
           </div>
 
           <div class="col-lg-6 pt-3 pt-lg-0 content">
-            <h3 style="color:#ff7f50">Fund Transfer</h3>
+            <h3 style="color:#ff7f50">Deposit</h3>
             <p class="fst-italic">
-             Transfer your funds instantly without any delay high speed fund transfer between accounts within Our bank
+              Deposit funds
             </p>
-               <h5 style="color:#ff7f50"><strong>Click here to Trasnfer Funds</strong></h5>       
+               <h5 style="color:#ff7f50"><strong>Click here to Deposit</strong></h5>       
                     <a asp-area="Views" asp-controller="Transaction" asp-action="Deposit"><input type="Submit" value="Deposit" class = "btn1"></a>
                    
             <p>
@@ -45,7 +45,7 @@
         
 
           <div class="col-lg-6 video-box align-self-baseline position-relative">
-            <img style="  border-radius: 12px;  width:485px; height: 300px !important;"src="assets/img/statementfinal.jpg" class="img-fluid" alt="">
+            <img style="  border-radius: 12px;  width:485px; height: 300px !important;"src="assets/img/WithDraw.jpg" class="img-fluid" alt="">
             
           </div>
 
@@ -72,17 +72,17 @@
         
 
           <div class="col-lg-6 video-box align-self-baseline position-relative">
-            <img style="  border-radius: 12px;  height: 300px !important;"src="assets/img/bene.jpg" class="img-fluid" alt="">
+            <img style="  border-radius: 12px;  height: 300px !important;"src="assets/img/Freeze.png" class="img-fluid" alt="">
             
           </div>
 
           <div class="col-lg-6 pt-3 pt-lg-0 content">
-            <h3 style="color:#ff7f50">Beneficiary</h3>
+            <h3 style="color:#ff7f50">Freeze Account</h3>
             <p class="fst-italic">
-            Deposit Money
+                Freeze Account
             </p>
-               <h5 style="color:#ff7f50"><strong>Click here to Deposit the money</strong></h5>       
-                    <a asp-area="Views" asp-controller="Transaction" asp-action="Deposit"><input type="Submit" value="Deposit" class = "btn1"> </a>
+               <h5 style="color:#ff7f50"><strong>Click here to Freeze Account</strong></h5>       
+                    <a asp-area="Views" asp-controller="Account" asp-action="FreezeAccount"><input type="Submit" value="FreezeAccount" class = "btn1"> </a>
             <p>
              
             </p>
@@ -92,31 +92,5 @@
 
       </div>
       </section>
-      <section style="padding-bottom: 140px";id="feature" class="about">
-        <div style="border-color:#ff7f50;" class="container">
-
-        <div class="row justify-content-end">
-        
-
-          <div class="col-lg-6 video-box align-self-baseline position-relative">
-            <center><img style="  border-radius: 12px; height: 300px !important; "src="assets/img/pngegg.png" class="img-fluid" alt=""></center>
-            
-          </div>
-
-          <div class="col-lg-6 pt-3 pt-lg-0 content">
-            <h3 style="color:#ff7f50">Edit Profile</h3>
-            <p class="fst-italic">
-             Edit your Details update you name,password. 
-            </p>
-               <h5 style="color:#ff7f50"><strong>Click here to Edit your Profile</strong></h5>       
-                     <a asp-area="Views" asp-controller="Customer" asp-action="EditCustomer"><input type="Submit" value="Edit Profile" class = "btn1"> </a>
-            <p>
-             
-            </p>
-          </div>
-
-        </div>
-
-      </div>
-      </section>
+     
     </body>
