--- a/BankMvcApp/Views/Beneficiary/ShowAllBeneficiary.cshtml
+++ b/BankMvcApp/Views/Beneficiary/ShowAllBeneficiary.cshtml
@@ -2,8 +2,9 @@
 
 @{
     ViewData["Title"] = "ShowAllBeneficiary";
+     Layout = "_Layout1";
 }
-
+<section id="show"><
 <h1>ShowAllBeneficiary</h1>
 
 <h4>Beneficiary</h4>
@@ -25,8 +26,4 @@
         </form>
     </div>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
+</section>
