--- a/BankMvcApp/Views/Customer/Credentials.cshtml
+++ b/BankMvcApp/Views/Customer/Credentials.cshtml
@@ -2,14 +2,15 @@
 
 @{
     ViewData["Title"] = "Credentials";
+     Layout = "_Layout";
 }
+<section id ="Cred">
 
-<h1>Credentials</h1>
+<h4 style="color:lightgreen; text-align:center; font-weight:bold;">Sucessfully Registred! </h4>
+<h3 style="color:Red; text-align:center; font-weight:bold;">Your Credentials</h3>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
+
+ <table class="table table-sm table-success">
     <thead>
         <tr>
             <th>
@@ -28,9 +29,10 @@
             <th></th>
         </tr>
     </thead>
+ 
     <tbody>
 @foreach (var item in Model) {
-        <tr>
+       <tr class="table-sm table-success">
             <td>
                 @Html.DisplayFor(modelItem => item.CRN)
             </td>
@@ -44,12 +46,10 @@
             <td>
                 @Html.DisplayFor(modelItem => item.BranchCode)
             </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>
+           
         </tr>
+        
 }
     </tbody>
 </table>
+</section>
