--- a/BankMvcApp/Views/Shared/_layout1.cshtml
+++ b/BankMvcApp/Views/Shared/_layout1.cshtml
@@ -57,15 +57,9 @@
             
          
           <li>
-           <a class="getstarted" asp-area="Views" asp-controller="Login" asp-action="UserLogin">Login</a>
+           <a class="getstarted" asp-area="Views" asp-controller="Home" asp-action="Index">LogOut</a>
            </li>
           
-            <li>
-           <a class="getstarted" asp-area="Views" asp-controller="Login" asp-action="Login">Admin Login</a>
-           </li>
-           <li>
-           <a class="getstarted" asp-area="Views" asp-controller="Customer" asp-action="CreateNewUser">Register</a>
-           </li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
