--- a/BankMvcApp/Views/Transaction/ViewStatement.cshtml
+++ b/BankMvcApp/Views/Transaction/ViewStatement.cshtml
@@ -1,8 +1,9 @@
 ﻿@model BankEntity.Transaction
 @{
     ViewData["Title"] = "ViewStatement";
+     Layout = "_Layout1";
 }
-
+<section id ="sts">
 <div class ="container p-5">
 <div class ="card shadow mt-5 m-auto w-50 ">
      
@@ -23,4 +24,4 @@
 </div>
 </div>
 </div>
-
+</section>
