--- a/BankMvcApp/Views/Transaction/Deposit.cshtml
+++ b/BankMvcApp/Views/Transaction/Deposit.cshtml
@@ -2,12 +2,13 @@
 
 @{
     ViewData["Title"] = "Deposit";
+     Layout = "_Layout1";
 }
 
-<h1>Deposit</h1>
 
-<h4>Transaction</h4>
-<hr />
+
+<section id="dep">
+    <h4>Deposit</h4>
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Deposit">
@@ -34,10 +35,7 @@
                 <input type="submit" value="Deposit" class="btn btn-primary" />
             </div>
         </form>
+         <p>@ViewBag.result</p>
     </div>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
+</section>
